app/api/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-live
  name: go-live
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-live
  sessionAffinity: None
  type: ClusterIP
