app/api/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-live
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: go-live
          servicePort: 8080
        path: /
